@@ -80,7 +80,7 @@ conky.text = [[
 # Based on https://github.com/km4ack/pi-build #
 ${font Arial:size=f1}${color Yellow}${alignc}WB0SIO
 ${voffset -20}
-${font Arial:bold:size=7}${color White}Gridsquare ${alignr}${color Yellow}${exec cat $HOME/bin/conky/Grid.txt}
+${font Arial:bold:size=7}${color White}Gridsquare ${alignr}${color Yellow}${execi 60 cat /run/user/${USER}/gridinfo.txt}
 #${font Arial:bold:size=7}${color White}Radio Freq ${alignr}${color Yellow}${exec cat $HOME/bin/conky/Freq.txt}
 ${font Arial:bold:size=7}\
 ${color Yellow}LOCAL${alignr}ZULU
